# RetroFE

./: .gitignore  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  coinops-flatpak-native.yml  coinops-runtime-flatpak.yml
Package/Environment/Common/: controls.conf  settings.conf
Package/Environment/Common/layouts/Arcades/: layout - 0.xml  layout 2nd animated screen - Animated 16x9.xml  layout 2nd animated screen - Animated.xml  layout 2nd screen - Animated 16x9.xml  layout 2nd screen - Animated.xml  layout.xml  splash.xml
RetroFE/CMake/: FindSDL3.cmake  FindSDL3_image.cmake  FindSDL3_mixer.cmake  FindSDL3_ttf.cmake
RetroFE/Source/: CMakeLists.txt  Main.cpp  RetroFE.cpp  RetroFE.h  SDL.cpp  SDL.h
RetroFE/Source/Collection/: CollectionInfo.cpp  CollectionInfoBuilder.cpp  Item.h  MenuParser.cpp
RetroFE/Source/Control/: GameControllerAxisHandler.cpp  GameControllerAxisHandler.h  GameControllerButtonHandler.cpp  GameControllerButtonHandler.h  InputHandler.h  MouseAxisHandler.cpp  TouchDragHandler.cpp  TouchDragHandler.h  UserInput.cpp  UserInput.h
RetroFE/Source/Control/Restrictor/: RestrictorManager.cpp  RestrictorManager.h  ServoStikRestrictor.cpp  ServoStikRestrictor.h  TOSGRSRestrictor.cpp  TOSGRSRestrictor.h
RetroFE/Source/Database/: Configuration.cpp  GlobalHiScores.cpp  GlobalHiScores.h  GlobalOpts.cpp  GlobalOpts.h  HiScores.cpp  HiScores.h  HighScoreData.h  HighScoreView.h  IScoredProvider.h  LocalHiScores.cpp  LocalHiScores.h  MetadataDatabase.cpp
RetroFE/Source/Execute/: AttractMode.cpp  AttractMode.h  Launcher.cpp
RetroFE/Source/Execute/Input/: InputMonitor.cpp  InputMonitor.h  SDLJoyStickScopeGuard.h
RetroFE/Source/Execute/Platform/Unix/: UnixProcessManager.cpp  UnixProcessManager.h
RetroFE/Source/Execute/Platform/Windows/: WindowsProcessManager.cpp  WindowsProcessManager.h
RetroFE/Source/Graphics/: Font.cpp  Font.h  FontCache.cpp  FontCache.h  Page.cpp  Page.h  PageBuilder.cpp  PageBuilder.h  ViewInfo.h
RetroFE/Source/Graphics/Animate/: Animation.cpp  Animation.h  AnimationEvents.cpp  AnimationEvents.h  Tween.cpp  Tween.h  TweenSet.cpp  TweenSet.h
RetroFE/Source/Graphics/Component/: Component.cpp  Component.h  Container.h  Image.cpp  Image.h  ImageBuilder.cpp  ImageBuilder.h  LocalScorePagePlan.cpp  LocalScorePagePlan.h  MusicPlayerComponent.cpp  MusicPlayerComponent.h  ReloadableGlobalHiscores.cpp  ReloadableGlobalHiscores.h  ReloadableHiscores.cpp  ReloadableHiscores.h  ReloadableMedia.cpp  ReloadableMedia.h  ReloadableScrollingText.cpp  ReloadableScrollingText.h  ReloadableText.cpp  ReloadableText.h  ScrollingList.cpp  ScrollingList.h  Text.cpp  Text.h  VideoBuilder.cpp  VideoBuilder.h  VideoComponent.cpp  VideoComponent.h
RetroFE/Source/Menu/: Menu.cpp
RetroFE/Source/Sound/: AudioBus.cpp  AudioBus.h  MusicPlayer.cpp  MusicPlayer.h  Sound.h
RetroFE/Source/Utility/: CrashHandler.cpp  CrashHandler.h  Log.cpp  SDLCompatibility.h  SDLImageCompatibility.h  SDLMainCompatibility.h  SDLMixerCompatibility.h  SDLSysWMCompatibility.h  SDLTtfCompatibility.h  ThreadPool.cpp  ThreadPool.h  Utils.cpp  Utils.h
RetroFE/Source/Video/: GStreamerVideo.cpp  GStreamerVideo.h  GlibLoop.cpp  GlibLoop.h  IVideo.h  VideoFactory.cpp  VideoFactory.h  VideoPool.cpp  VideoPool.h
RetroFE/xcode/retrofe.xcodeproj/: project.pbxproj
docs/: CONTROLS.md  GLOBAL_SETTINGS.md  animation-batching-simd-plan.md
